--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,10 @@ h1,h2,h3,h4,h5,h6{
   width:100%;
   margin-top:50px;
 }
+.menu .section .image{
+    max-width: 300px;
+    margin: auto;
+}
 .section .title{
   margin-bottom:20px;
   color:#e20519;
